--- a/src/Components/SignIn.css
+++ b/src/Components/SignIn.css
@@ -2,6 +2,7 @@
     margin: 10rem 6rem 4rem 6rem;
 }
 
+
 .signin-form h2{
     color: #2a2a2a;
 }
@@ -34,4 +35,34 @@
 .F-Password{
     text-decoration: none;
     color: #000;
+}
+.signin-form button{
+    display: inline;
+}
+@media screen and (max-width:1024px) {
+    .signin-form{
+        margin: 4rem 2rem;
+    }
+    .signin-form form{
+        padding-top: 2rem;
+        width: 90%;
+    }
+    .signin-tab {
+        width: 100%;
+    }
+    .signin-Btn{
+        display: inline;
+    }
+}
+@media screen and (max-width:850px) {
+    .signin-tab {
+        width: 90%;
+    }
+}
+
+@media screen and (max-width:590px) {
+    .signin-tab {
+        display: flex;
+        flex-direction: row;
+    }
 }
